chore: upgrade to Java 21
Closes: MODELINKS-300