@@ -1,13 +1,13 @@
 package org.folio.entlinks.controller.converter;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.ListAssert.assertThatList;
+import static org.assertj.core.api.MapAssert.assertThatMap;
 import static org.folio.support.base.TestConstants.TEST_PROPERTY_VALUE;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import org.assertj.core.api.ListAssert;
-import org.assertj.core.api.MapAssert;
 import org.folio.entlinks.domain.dto.LinkingRuleDto;
 import org.folio.entlinks.domain.dto.LinkingRulePatchRequest;
 import org.folio.entlinks.domain.dto.SubfieldModification;
@@ -28,15 +28,15 @@ class LinkingRulesMapperTest {
 
     List<LinkingRuleDto> dtoList = mapper.convert(sourceList);
 
-    ListAssert.assertThatList(sourceList).hasSameSizeAs(dtoList);
-    LinkingRuleDto linkingRuleDto = dtoList.get(0);
+    assertThatList(sourceList).hasSameSizeAs(dtoList);
+    LinkingRuleDto linkingRuleDto = dtoList.getFirst();
     assertThat(linkingRuleDto.getId()).isEqualTo(rule.getId());
     assertThat(linkingRuleDto.getBibField()).isEqualTo(rule.getBibField());
     assertThat(linkingRuleDto.getAuthorityField()).isEqualTo(rule.getAuthorityField());
-    assertThat(linkingRuleDto.getAuthoritySubfields().get(0).charAt(0)).isEqualTo(rule.getAuthoritySubfields()[0]);
-    SubfieldModification modification = linkingRuleDto.getSubfieldModifications().get(0);
-    assertThat(modification.getTarget()).isEqualTo(rule.getSubfieldModifications().get(0).getTarget());
-    assertThat(modification.getSource()).isEqualTo(rule.getSubfieldModifications().get(0).getSource());
+    assertThat(linkingRuleDto.getAuthoritySubfields().getFirst().charAt(0)).isEqualTo(rule.getAuthoritySubfields()[0]);
+    SubfieldModification modification = linkingRuleDto.getSubfieldModifications().getFirst();
+    assertThat(modification.getTarget()).isEqualTo(rule.getSubfieldModifications().getFirst().getTarget());
+    assertThat(modification.getSource()).isEqualTo(rule.getSubfieldModifications().getFirst().getSource());
     assertThat(linkingRuleDto.getAutoLinkingEnabled()).isEqualTo(rule.getAutoLinkingEnabled());
   }
 
@@ -49,10 +49,10 @@ class LinkingRulesMapperTest {
     assertThat(dto.getId()).isEqualTo(rule.getId());
     assertThat(dto.getBibField()).isEqualTo(rule.getBibField());
     assertThat(dto.getAuthorityField()).isEqualTo(rule.getAuthorityField());
-    assertThat(dto.getAuthoritySubfields().get(0).charAt(0)).isEqualTo(rule.getAuthoritySubfields()[0]);
-    SubfieldModification modification = dto.getSubfieldModifications().get(0);
-    assertThat(modification.getTarget()).isEqualTo(rule.getSubfieldModifications().get(0).getTarget());
-    assertThat(modification.getSource()).isEqualTo(rule.getSubfieldModifications().get(0).getSource());
+    assertThat(dto.getAuthoritySubfields().getFirst().charAt(0)).isEqualTo(rule.getAuthoritySubfields()[0]);
+    SubfieldModification modification = dto.getSubfieldModifications().getFirst();
+    assertThat(modification.getTarget()).isEqualTo(rule.getSubfieldModifications().getFirst().getTarget());
+    assertThat(modification.getSource()).isEqualTo(rule.getSubfieldModifications().getFirst().getSource());
     assertThat(dto.getAutoLinkingEnabled()).isEqualTo(rule.getAutoLinkingEnabled());
   }
 
@@ -77,7 +77,7 @@ class LinkingRulesMapperTest {
     SubfieldValidation validation = mapper.convert(existenceMap);
 
     var existenceValue = existenceMap.get(existence);
-    MapAssert.assertThatMap(validation.getExistence().get(0)).containsEntry(existence, existenceValue);
+    assertThatMap(validation.getExistence().getFirst()).containsEntry(existence, existenceValue);
   }
 
   private InstanceAuthorityLinkingRule createSubfieldModification() {
@@ -88,7 +88,7 @@ class LinkingRulesMapperTest {
     var rule = new InstanceAuthorityLinkingRule();
     rule.setBibField(TEST_PROPERTY_VALUE);
     rule.setAuthorityField(TEST_PROPERTY_VALUE);
-    rule.setAuthoritySubfields(new char[]{'a', 'b'});
+    rule.setAuthoritySubfields(new char[] {'a', 'b'});
     rule.setAutoLinkingEnabled(true);
     rule.setSubfieldModifications(List.of(subfieldModification));
     return rule;
